tests/kulezi_tests/bad/bad_inheritance002.lat
class C extends B{}
class B extends A{void f(int x){}}
class A{void f(){}}


int main() {
    return 0;
}